objects/AMC__c.object
<CustomObject>
    <label>AMC</label>
    <nameField>
        <displayFormat>A- {000}</displayFormat>
        <label>AMC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMC&apos;s</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>GST__c</fullName>
        <label>GST (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>Start_Time__c  -  End_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Price__c +(Price__c* GST__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Expired-Lapsed</fullName>
                </value>
                <value>
                    <fullName>Expired-Renewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMC&apos;s</relationshipLabel>
        <relationshipName>AMC_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMC_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMC Plan</label>
        <referenceTo>AMC_Plan__c</referenceTo>
        <relationshipLabel>AMC&apos;s</relationshipLabel>
        <relationshipName>AMC_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF( AMC_Plan__r.Period_days__c &lt;&gt; 0, Start_Date1__c+ AMC_Plan__r.Period_days__c, Start_Date1__c+ AMC_Plan__r.Custom_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Date1__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Date1__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installations__c</fullName>
        <label>Installations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supports_hours__c</fullName>
        <label>Supports hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_hours__c</fullName>
        <label>Training hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>